--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "devDependencies": {
     "@alvarosabu/prettier-config": "^1.3.0",
-    "@unocss/nuxt": "^0.53.1",
-    "nuxt": "^3.5.3"
+    "@unocss/nuxt": "^0.53.6",
+    "nuxt": "^3.6.5"
   },
   "dependencies": {
+    "@marvr/storyblok-rich-text-types": "^3.2.1",
+    "@marvr/storyblok-rich-text-vue-renderer": "^3.2.1",
     "@stackblitz/sdk": "^1.9.0",
-    "@storyblok/astro": "^2.3.4",
-    "@storyblok/design-system": "^3.12.0",
-    "@storyblok/nuxt": "^5.5.0"
+    "@storyblok/astro": "^2.5.4",
+    "@storyblok/design-system": "^3.13.0",
+    "@storyblok/nuxt": "^5.5.2",
+    "lite-youtube-embed": "^0.2.0"
   }
 }
